<resources>
    <string name="app_name">ЛК преподавателя АлтГТУ</string>
    <!-- Strings related to teacher -->


    <!-- Strings related to menu -->
    <string name="messages">Сообщения</string>
    <string name="journal">Журнал</string>
    <string name="attendance">Посещаемость</string>
    <string name="attestation">Аттестация</string>
    <string name="filling_disciplines">Наполнение дисциплины</string>
    <string name="study">Успеваемость</string>
    <string name="groups">Группы</string>


    <!-- Strings related to attendance -->
    <string name="discipline">Дисциплина</string>
    <string name="time">Время</string>
    <string name="date">Дата</string>
    <string name="group">Группа</string>
    <string name="number_sign">№</string>
    <string name="full_name">ФИО</string>
    <string name="present">Присутс.</string>
    <string name="oneday">25\nмая</string>
    <string name="yesterday">23\nмая</string>
    <string name="yesteryesterday">18\nмая</string>
    <string name="absent">Отсутс.</string>

    <!--Strings related to attestation-->
    <string name="attestationAt">Атт./Посещ.</string>
    <string name="slash">/</string>



    <string name="select_control_point_error">Выберите тип контрольных точек</string>
</resources>
