<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/timetable" />
        <item
            android:id="@+id/nav_messages_t"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/journal" />
<!--        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/attendance" />-->
        <!--<item-->
            <!--android:id="@+id/nav_attestation_t"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="@string/attestation" />-->
        <item
            android:id="@+id/nav_filling_discipline"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/filling_disciplines" />
        <!--<item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/study" />-->
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/groups" />
            android:title="@string/study" />
    </group>
</menu>
